y.output
   0  $accept : prog $end

   1  $$1 :

   2  prog : $$1 dList mainF

   3  $$2 :

   4  $$3 :

   5  mainF : VOID MAIN '(' ')' $$2 '{' lcmd $$3 '}'

   6  dList : decl dList
   7        |

   8  decl : type ID ';'

   9  type : INT
  10       | FLOAT
  11       | BOOL

  12  lcmd : lcmd cmd
  13       |

  14  cmd : exp ';'
  15      | '{' lcmd '}'
  16      | WRITE '(' LIT ')' ';'

  17  $$4 :

  18  cmd : WRITE '(' LIT $$4 ',' exp ')' ';'
  19      | READ '(' ID ')' ';'
  20      | BREAK ';'
  21      | CONTINUE ';'

  22  $$5 :

  23  cmd : DO $$5 cmd WHILE '(' exp ')' ';'

  24  $$6 :

  25  $$7 :

  26  cmd : WHILE $$6 '(' exp ')' $$7 cmd

  27  $$8 :

  28  cmd : IF '(' exp $$8 ')' cmd restoIf

  29  $$9 :

  30  $$10 :

  31  cmd : FOR '(' for_init ';' $$9 for_cond ';' for_incr ')' $$10 cmd

  32  $$11 :

  33  restoIf : ELSE $$11 cmd
  34          |

  35  for_init :
  36           | exp

  37  for_cond :

  38  $$12 :

  39  for_cond : $$12 exp

  40  for_incr :

  41  $$13 :

  42  for_incr : $$13 exp

  43  exp : NUM
  44      | TRUE
  45      | FALSE
  46      | ID
  47      | '(' exp ')'
  48      | '!' exp
  49      | INC ID
  50      | DEC ID
  51      | ID INC
  52      | ID DEC
  53      | ID ADDEQ exp
  54      | exp '+' exp
  55      | exp '-' exp
  56      | exp '*' exp
  57      | exp '/' exp
  58      | exp '%' exp
  59      | exp '>' exp
  60      | exp '<' exp
  61      | exp EQ exp
  62      | exp LEQ exp
  63      | exp GEQ exp
  64      | exp NEQ exp
  65      | exp OR exp
  66      | exp AND exp
  67      | exp '?' exp ':' exp
  68      | ID '=' exp

state 0
	$accept : . prog $end  (0)
	$$1 : .  (1)

	.  reduce 1

	prog  goto 1
	$$1  goto 2


state 1
	$accept : prog . $end  (0)

	$end  accept


state 2
	prog : $$1 . dList mainF  (2)
	dList : .  (7)

	INT  shift 3
	FLOAT  shift 4
	BOOL  shift 5
	VOID  reduce 7

	type  goto 6
	dList  goto 7
	decl  goto 8


state 3
	type : INT .  (9)

	.  reduce 9


state 4
	type : FLOAT .  (10)

	.  reduce 10


state 5
	type : BOOL .  (11)

	.  reduce 11


state 6
	decl : type . ID ';'  (8)

	ID  shift 9
	.  error


state 7
	prog : $$1 dList . mainF  (2)

	VOID  shift 10
	.  error

	mainF  goto 11


state 8
	dList : decl . dList  (6)
	dList : .  (7)

	INT  shift 3
	FLOAT  shift 4
	BOOL  shift 5
	VOID  reduce 7

	type  goto 6
	dList  goto 12
	decl  goto 8


state 9
	decl : type ID . ';'  (8)

	';'  shift 13
	.  error


state 10
	mainF : VOID . MAIN '(' ')' $$2 '{' lcmd $$3 '}'  (5)

	MAIN  shift 14
	.  error


state 11
	prog : $$1 dList mainF .  (2)

	.  reduce 2


state 12
	dList : decl dList .  (6)

	.  reduce 6


state 13
	decl : type ID ';' .  (8)

	.  reduce 8


state 14
	mainF : VOID MAIN . '(' ')' $$2 '{' lcmd $$3 '}'  (5)

	'('  shift 15
	.  error


state 15
	mainF : VOID MAIN '(' . ')' $$2 '{' lcmd $$3 '}'  (5)

	')'  shift 16
	.  error


state 16
	mainF : VOID MAIN '(' ')' . $$2 '{' lcmd $$3 '}'  (5)
	$$2 : .  (3)

	.  reduce 3

	$$2  goto 17


state 17
	mainF : VOID MAIN '(' ')' $$2 . '{' lcmd $$3 '}'  (5)

	'{'  shift 18
	.  error


state 18
	mainF : VOID MAIN '(' ')' $$2 '{' . lcmd $$3 '}'  (5)
	lcmd : .  (13)

	.  reduce 13

	lcmd  goto 19


state 19
	mainF : VOID MAIN '(' ')' $$2 '{' lcmd . $$3 '}'  (5)
	lcmd : lcmd . cmd  (12)
	$$3 : .  (4)

	ID  shift 20
	NUM  shift 21
	READ  shift 22
	WRITE  shift 23
	IF  shift 24
	WHILE  shift 25
	TRUE  shift 26
	FALSE  shift 27
	DO  shift 28
	FOR  shift 29
	INC  shift 30
	DEC  shift 31
	BREAK  shift 32
	CONTINUE  shift 33
	'!'  shift 34
	'('  shift 35
	'{'  shift 36
	'}'  reduce 4

	$$3  goto 37
	cmd  goto 38
	exp  goto 39


state 20
	exp : ID .  (46)
	exp : ID . INC  (51)
	exp : ID . DEC  (52)
	exp : ID . ADDEQ exp  (53)
	exp : ID . '=' exp  (68)

	INC  shift 40
	DEC  shift 41
	ADDEQ  shift 42
	'='  shift 43
	EQ  reduce 46
	LEQ  reduce 46
	GEQ  reduce 46
	NEQ  reduce 46
	AND  reduce 46
	OR  reduce 46
	'?'  reduce 46
	':'  reduce 46
	'>'  reduce 46
	'<'  reduce 46
	'+'  reduce 46
	'-'  reduce 46
	'*'  reduce 46
	'/'  reduce 46
	'%'  reduce 46
	')'  reduce 46
	';'  reduce 46


state 21
	exp : NUM .  (43)

	.  reduce 43


state 22
	cmd : READ . '(' ID ')' ';'  (19)

	'('  shift 44
	.  error


state 23
	cmd : WRITE . '(' LIT ')' ';'  (16)
	cmd : WRITE . '(' LIT $$4 ',' exp ')' ';'  (18)

	'('  shift 45
	.  error


state 24
	cmd : IF . '(' exp $$8 ')' cmd restoIf  (28)

	'('  shift 46
	.  error


state 25
	cmd : WHILE . $$6 '(' exp ')' $$7 cmd  (26)
	$$6 : .  (24)

	.  reduce 24

	$$6  goto 47


state 26
	exp : TRUE .  (44)

	.  reduce 44


state 27
	exp : FALSE .  (45)

	.  reduce 45


state 28
	cmd : DO . $$5 cmd WHILE '(' exp ')' ';'  (23)
	$$5 : .  (22)

	.  reduce 22

	$$5  goto 48


state 29
	cmd : FOR . '(' for_init ';' $$9 for_cond ';' for_incr ')' $$10 cmd  (31)

	'('  shift 49
	.  error


state 30
	exp : INC . ID  (49)

	ID  shift 50
	.  error


state 31
	exp : DEC . ID  (50)

	ID  shift 51
	.  error


state 32
	cmd : BREAK . ';'  (20)

	';'  shift 52
	.  error


state 33
	cmd : CONTINUE . ';'  (21)

	';'  shift 53
	.  error


state 34
	exp : '!' . exp  (48)

	ID  shift 20
	NUM  shift 21
	TRUE  shift 26
	FALSE  shift 27
	INC  shift 30
	DEC  shift 31
	'!'  shift 34
	'('  shift 35
	.  error

	exp  goto 54


state 35
	exp : '(' . exp ')'  (47)

	ID  shift 20
	NUM  shift 21
	TRUE  shift 26
	FALSE  shift 27
	INC  shift 30
	DEC  shift 31
	'!'  shift 34
	'('  shift 35
	.  error

	exp  goto 55


state 36
	cmd : '{' . lcmd '}'  (15)
	lcmd : .  (13)

	.  reduce 13

	lcmd  goto 56


state 37
	mainF : VOID MAIN '(' ')' $$2 '{' lcmd $$3 . '}'  (5)

	'}'  shift 57
	.  error


state 38
	lcmd : lcmd cmd .  (12)

	.  reduce 12


state 39
	cmd : exp . ';'  (14)
	exp : exp . '+' exp  (54)
	exp : exp . '-' exp  (55)
	exp : exp . '*' exp  (56)
	exp : exp . '/' exp  (57)
	exp : exp . '%' exp  (58)
	exp : exp . '>' exp  (59)
	exp : exp . '<' exp  (60)
	exp : exp . EQ exp  (61)
	exp : exp . LEQ exp  (62)
	exp : exp . GEQ exp  (63)
	exp : exp . NEQ exp  (64)
	exp : exp . OR exp  (65)
	exp : exp . AND exp  (66)
	exp : exp . '?' exp ':' exp  (67)

	EQ  shift 58
	LEQ  shift 59
	GEQ  shift 60
	NEQ  shift 61
	AND  shift 62
	OR  shift 63
	'?'  shift 64
	'>'  shift 65
	'<'  shift 66
	'+'  shift 67
	'-'  shift 68
	'*'  shift 69
	'/'  shift 70
	'%'  shift 71
	';'  shift 72
	.  error


state 40
	exp : ID INC .  (51)

	.  reduce 51


state 41
	exp : ID DEC .  (52)

	.  reduce 52


state 42
	exp : ID ADDEQ . exp  (53)

	ID  shift 20
	NUM  shift 21
	TRUE  shift 26
	FALSE  shift 27
	INC  shift 30
	DEC  shift 31
	'!'  shift 34
	'('  shift 35
	.  error

	exp  goto 73


state 43
	exp : ID '=' . exp  (68)

	ID  shift 20
	NUM  shift 21
	TRUE  shift 26
	FALSE  shift 27
	INC  shift 30
	DEC  shift 31
	'!'  shift 34
	'('  shift 35
	.  error

	exp  goto 74


state 44
	cmd : READ '(' . ID ')' ';'  (19)

	ID  shift 75
	.  error


state 45
	cmd : WRITE '(' . LIT ')' ';'  (16)
	cmd : WRITE '(' . LIT $$4 ',' exp ')' ';'  (18)

	LIT  shift 76
	.  error


state 46
	cmd : IF '(' . exp $$8 ')' cmd restoIf  (28)

	ID  shift 20
	NUM  shift 21
	TRUE  shift 26
	FALSE  shift 27
	INC  shift 30
	DEC  shift 31
	'!'  shift 34
	'('  shift 35
	.  error

	exp  goto 77


state 47
	cmd : WHILE $$6 . '(' exp ')' $$7 cmd  (26)

	'('  shift 78
	.  error


state 48
	cmd : DO $$5 . cmd WHILE '(' exp ')' ';'  (23)

	ID  shift 20
	NUM  shift 21
	READ  shift 22
	WRITE  shift 23
	IF  shift 24
	WHILE  shift 25
	TRUE  shift 26
	FALSE  shift 27
	DO  shift 28
	FOR  shift 29
	INC  shift 30
	DEC  shift 31
	BREAK  shift 32
	CONTINUE  shift 33
	'!'  shift 34
	'('  shift 35
	'{'  shift 36
	.  error

	cmd  goto 79
	exp  goto 39


state 49
	cmd : FOR '(' . for_init ';' $$9 for_cond ';' for_incr ')' $$10 cmd  (31)
	for_init : .  (35)

	ID  shift 20
	NUM  shift 21
	TRUE  shift 26
	FALSE  shift 27
	INC  shift 30
	DEC  shift 31
	'!'  shift 34
	'('  shift 35
	';'  reduce 35

	exp  goto 80
	for_init  goto 81


state 50
	exp : INC ID .  (49)

	.  reduce 49


state 51
	exp : DEC ID .  (50)

	.  reduce 50


state 52
	cmd : BREAK ';' .  (20)

	.  reduce 20


state 53
	cmd : CONTINUE ';' .  (21)

	.  reduce 21


state 54
	exp : '!' exp .  (48)
	exp : exp . '+' exp  (54)
	exp : exp . '-' exp  (55)
	exp : exp . '*' exp  (56)
	exp : exp . '/' exp  (57)
	exp : exp . '%' exp  (58)
	exp : exp . '>' exp  (59)
	exp : exp . '<' exp  (60)
	exp : exp . EQ exp  (61)
	exp : exp . LEQ exp  (62)
	exp : exp . GEQ exp  (63)
	exp : exp . NEQ exp  (64)
	exp : exp . OR exp  (65)
	exp : exp . AND exp  (66)
	exp : exp . '?' exp ':' exp  (67)

	.  reduce 48


state 55
	exp : '(' exp . ')'  (47)
	exp : exp . '+' exp  (54)
	exp : exp . '-' exp  (55)
	exp : exp . '*' exp  (56)
	exp : exp . '/' exp  (57)
	exp : exp . '%' exp  (58)
	exp : exp . '>' exp  (59)
	exp : exp . '<' exp  (60)
	exp : exp . EQ exp  (61)
	exp : exp . LEQ exp  (62)
	exp : exp . GEQ exp  (63)
	exp : exp . NEQ exp  (64)
	exp : exp . OR exp  (65)
	exp : exp . AND exp  (66)
	exp : exp . '?' exp ':' exp  (67)

	EQ  shift 58
	LEQ  shift 59
	GEQ  shift 60
	NEQ  shift 61
	AND  shift 62
	OR  shift 63
	'?'  shift 64
	'>'  shift 65
	'<'  shift 66
	'+'  shift 67
	'-'  shift 68
	'*'  shift 69
	'/'  shift 70
	'%'  shift 71
	')'  shift 82
	.  error


state 56
	lcmd : lcmd . cmd  (12)
	cmd : '{' lcmd . '}'  (15)

	ID  shift 20
	NUM  shift 21
	READ  shift 22
	WRITE  shift 23
	IF  shift 24
	WHILE  shift 25
	TRUE  shift 26
	FALSE  shift 27
	DO  shift 28
	FOR  shift 29
	INC  shift 30
	DEC  shift 31
	BREAK  shift 32
	CONTINUE  shift 33
	'!'  shift 34
	'('  shift 35
	'{'  shift 36
	'}'  shift 83
	.  error

	cmd  goto 38
	exp  goto 39


state 57
	mainF : VOID MAIN '(' ')' $$2 '{' lcmd $$3 '}' .  (5)

	.  reduce 5


state 58
	exp : exp EQ . exp  (61)

	ID  shift 20
	NUM  shift 21
	TRUE  shift 26
	FALSE  shift 27
	INC  shift 30
	DEC  shift 31
	'!'  shift 34
	'('  shift 35
	.  error

	exp  goto 84


state 59
	exp : exp LEQ . exp  (62)

	ID  shift 20
	NUM  shift 21
	TRUE  shift 26
	FALSE  shift 27
	INC  shift 30
	DEC  shift 31
	'!'  shift 34
	'('  shift 35
	.  error

	exp  goto 85


state 60
	exp : exp GEQ . exp  (63)

	ID  shift 20
	NUM  shift 21
	TRUE  shift 26
	FALSE  shift 27
	INC  shift 30
	DEC  shift 31
	'!'  shift 34
	'('  shift 35
	.  error

	exp  goto 86


state 61
	exp : exp NEQ . exp  (64)

	ID  shift 20
	NUM  shift 21
	TRUE  shift 26
	FALSE  shift 27
	INC  shift 30
	DEC  shift 31
	'!'  shift 34
	'('  shift 35
	.  error

	exp  goto 87


state 62
	exp : exp AND . exp  (66)

	ID  shift 20
	NUM  shift 21
	TRUE  shift 26
	FALSE  shift 27
	INC  shift 30
	DEC  shift 31
	'!'  shift 34
	'('  shift 35
	.  error

	exp  goto 88


state 63
	exp : exp OR . exp  (65)

	ID  shift 20
	NUM  shift 21
	TRUE  shift 26
	FALSE  shift 27
	INC  shift 30
	DEC  shift 31
	'!'  shift 34
	'('  shift 35
	.  error

	exp  goto 89


state 64
	exp : exp '?' . exp ':' exp  (67)

	ID  shift 20
	NUM  shift 21
	TRUE  shift 26
	FALSE  shift 27
	INC  shift 30
	DEC  shift 31
	'!'  shift 34
	'('  shift 35
	.  error

	exp  goto 90


state 65
	exp : exp '>' . exp  (59)

	ID  shift 20
	NUM  shift 21
	TRUE  shift 26
	FALSE  shift 27
	INC  shift 30
	DEC  shift 31
	'!'  shift 34
	'('  shift 35
	.  error

	exp  goto 91


state 66
	exp : exp '<' . exp  (60)

	ID  shift 20
	NUM  shift 21
	TRUE  shift 26
	FALSE  shift 27
	INC  shift 30
	DEC  shift 31
	'!'  shift 34
	'('  shift 35
	.  error

	exp  goto 92


state 67
	exp : exp '+' . exp  (54)

	ID  shift 20
	NUM  shift 21
	TRUE  shift 26
	FALSE  shift 27
	INC  shift 30
	DEC  shift 31
	'!'  shift 34
	'('  shift 35
	.  error

	exp  goto 93


state 68
	exp : exp '-' . exp  (55)

	ID  shift 20
	NUM  shift 21
	TRUE  shift 26
	FALSE  shift 27
	INC  shift 30
	DEC  shift 31
	'!'  shift 34
	'('  shift 35
	.  error

	exp  goto 94


state 69
	exp : exp '*' . exp  (56)

	ID  shift 20
	NUM  shift 21
	TRUE  shift 26
	FALSE  shift 27
	INC  shift 30
	DEC  shift 31
	'!'  shift 34
	'('  shift 35
	.  error

	exp  goto 95


state 70
	exp : exp '/' . exp  (57)

	ID  shift 20
	NUM  shift 21
	TRUE  shift 26
	FALSE  shift 27
	INC  shift 30
	DEC  shift 31
	'!'  shift 34
	'('  shift 35
	.  error

	exp  goto 96


state 71
	exp : exp '%' . exp  (58)

	ID  shift 20
	NUM  shift 21
	TRUE  shift 26
	FALSE  shift 27
	INC  shift 30
	DEC  shift 31
	'!'  shift 34
	'('  shift 35
	.  error

	exp  goto 97


state 72
	cmd : exp ';' .  (14)

	.  reduce 14


73: shift/reduce conflict (shift 58, reduce 53) on EQ
73: shift/reduce conflict (shift 59, reduce 53) on LEQ
73: shift/reduce conflict (shift 60, reduce 53) on GEQ
73: shift/reduce conflict (shift 61, reduce 53) on NEQ
73: shift/reduce conflict (shift 62, reduce 53) on AND
73: shift/reduce conflict (shift 63, reduce 53) on OR
73: shift/reduce conflict (shift 64, reduce 53) on '?'
73: shift/reduce conflict (shift 65, reduce 53) on '>'
73: shift/reduce conflict (shift 66, reduce 53) on '<'
73: shift/reduce conflict (shift 67, reduce 53) on '+'
73: shift/reduce conflict (shift 68, reduce 53) on '-'
73: shift/reduce conflict (shift 69, reduce 53) on '*'
73: shift/reduce conflict (shift 70, reduce 53) on '/'
73: shift/reduce conflict (shift 71, reduce 53) on '%'
state 73
	exp : ID ADDEQ exp .  (53)
	exp : exp . '+' exp  (54)
	exp : exp . '-' exp  (55)
	exp : exp . '*' exp  (56)
	exp : exp . '/' exp  (57)
	exp : exp . '%' exp  (58)
	exp : exp . '>' exp  (59)
	exp : exp . '<' exp  (60)
	exp : exp . EQ exp  (61)
	exp : exp . LEQ exp  (62)
	exp : exp . GEQ exp  (63)
	exp : exp . NEQ exp  (64)
	exp : exp . OR exp  (65)
	exp : exp . AND exp  (66)
	exp : exp . '?' exp ':' exp  (67)

	EQ  shift 58
	LEQ  shift 59
	GEQ  shift 60
	NEQ  shift 61
	AND  shift 62
	OR  shift 63
	'?'  shift 64
	'>'  shift 65
	'<'  shift 66
	'+'  shift 67
	'-'  shift 68
	'*'  shift 69
	'/'  shift 70
	'%'  shift 71
	':'  reduce 53
	')'  reduce 53
	';'  reduce 53


state 74
	exp : exp . '+' exp  (54)
	exp : exp . '-' exp  (55)
	exp : exp . '*' exp  (56)
	exp : exp . '/' exp  (57)
	exp : exp . '%' exp  (58)
	exp : exp . '>' exp  (59)
	exp : exp . '<' exp  (60)
	exp : exp . EQ exp  (61)
	exp : exp . LEQ exp  (62)
	exp : exp . GEQ exp  (63)
	exp : exp . NEQ exp  (64)
	exp : exp . OR exp  (65)
	exp : exp . AND exp  (66)
	exp : exp . '?' exp ':' exp  (67)
	exp : ID '=' exp .  (68)

	EQ  shift 58
	LEQ  shift 59
	GEQ  shift 60
	NEQ  shift 61
	AND  shift 62
	OR  shift 63
	'?'  shift 64
	'>'  shift 65
	'<'  shift 66
	'+'  shift 67
	'-'  shift 68
	'*'  shift 69
	'/'  shift 70
	'%'  shift 71
	':'  reduce 68
	')'  reduce 68
	';'  reduce 68


state 75
	cmd : READ '(' ID . ')' ';'  (19)

	')'  shift 98
	.  error


state 76
	cmd : WRITE '(' LIT . ')' ';'  (16)
	cmd : WRITE '(' LIT . $$4 ',' exp ')' ';'  (18)
	$$4 : .  (17)

	')'  shift 99
	','  reduce 17

	$$4  goto 100


state 77
	cmd : IF '(' exp . $$8 ')' cmd restoIf  (28)
	exp : exp . '+' exp  (54)
	exp : exp . '-' exp  (55)
	exp : exp . '*' exp  (56)
	exp : exp . '/' exp  (57)
	exp : exp . '%' exp  (58)
	exp : exp . '>' exp  (59)
	exp : exp . '<' exp  (60)
	exp : exp . EQ exp  (61)
	exp : exp . LEQ exp  (62)
	exp : exp . GEQ exp  (63)
	exp : exp . NEQ exp  (64)
	exp : exp . OR exp  (65)
	exp : exp . AND exp  (66)
	exp : exp . '?' exp ':' exp  (67)
	$$8 : .  (27)

	EQ  shift 58
	LEQ  shift 59
	GEQ  shift 60
	NEQ  shift 61
	AND  shift 62
	OR  shift 63
	'?'  shift 64
	'>'  shift 65
	'<'  shift 66
	'+'  shift 67
	'-'  shift 68
	'*'  shift 69
	'/'  shift 70
	'%'  shift 71
	')'  reduce 27

	$$8  goto 101


state 78
	cmd : WHILE $$6 '(' . exp ')' $$7 cmd  (26)

	ID  shift 20
	NUM  shift 21
	TRUE  shift 26
	FALSE  shift 27
	INC  shift 30
	DEC  shift 31
	'!'  shift 34
	'('  shift 35
	.  error

	exp  goto 102


state 79
	cmd : DO $$5 cmd . WHILE '(' exp ')' ';'  (23)

	WHILE  shift 103
	.  error


state 80
	for_init : exp .  (36)
	exp : exp . '+' exp  (54)
	exp : exp . '-' exp  (55)
	exp : exp . '*' exp  (56)
	exp : exp . '/' exp  (57)
	exp : exp . '%' exp  (58)
	exp : exp . '>' exp  (59)
	exp : exp . '<' exp  (60)
	exp : exp . EQ exp  (61)
	exp : exp . LEQ exp  (62)
	exp : exp . GEQ exp  (63)
	exp : exp . NEQ exp  (64)
	exp : exp . OR exp  (65)
	exp : exp . AND exp  (66)
	exp : exp . '?' exp ':' exp  (67)

	EQ  shift 58
	LEQ  shift 59
	GEQ  shift 60
	NEQ  shift 61
	AND  shift 62
	OR  shift 63
	'?'  shift 64
	'>'  shift 65
	'<'  shift 66
	'+'  shift 67
	'-'  shift 68
	'*'  shift 69
	'/'  shift 70
	'%'  shift 71
	';'  reduce 36


state 81
	cmd : FOR '(' for_init . ';' $$9 for_cond ';' for_incr ')' $$10 cmd  (31)

	';'  shift 104
	.  error


state 82
	exp : '(' exp ')' .  (47)

	.  reduce 47


state 83
	cmd : '{' lcmd '}' .  (15)

	.  reduce 15


state 84
	exp : exp . '+' exp  (54)
	exp : exp . '-' exp  (55)
	exp : exp . '*' exp  (56)
	exp : exp . '/' exp  (57)
	exp : exp . '%' exp  (58)
	exp : exp . '>' exp  (59)
	exp : exp . '<' exp  (60)
	exp : exp . EQ exp  (61)
	exp : exp EQ exp .  (61)
	exp : exp . LEQ exp  (62)
	exp : exp . GEQ exp  (63)
	exp : exp . NEQ exp  (64)
	exp : exp . OR exp  (65)
	exp : exp . AND exp  (66)
	exp : exp . '?' exp ':' exp  (67)

	'+'  shift 67
	'-'  shift 68
	'*'  shift 69
	'/'  shift 70
	'%'  shift 71
	EQ  reduce 61
	LEQ  reduce 61
	GEQ  reduce 61
	NEQ  reduce 61
	AND  reduce 61
	OR  reduce 61
	'?'  reduce 61
	':'  reduce 61
	'>'  reduce 61
	'<'  reduce 61
	')'  reduce 61
	';'  reduce 61


state 85
	exp : exp . '+' exp  (54)
	exp : exp . '-' exp  (55)
	exp : exp . '*' exp  (56)
	exp : exp . '/' exp  (57)
	exp : exp . '%' exp  (58)
	exp : exp . '>' exp  (59)
	exp : exp . '<' exp  (60)
	exp : exp . EQ exp  (61)
	exp : exp . LEQ exp  (62)
	exp : exp LEQ exp .  (62)
	exp : exp . GEQ exp  (63)
	exp : exp . NEQ exp  (64)
	exp : exp . OR exp  (65)
	exp : exp . AND exp  (66)
	exp : exp . '?' exp ':' exp  (67)

	'+'  shift 67
	'-'  shift 68
	'*'  shift 69
	'/'  shift 70
	'%'  shift 71
	EQ  reduce 62
	LEQ  reduce 62
	GEQ  reduce 62
	NEQ  reduce 62
	AND  reduce 62
	OR  reduce 62
	'?'  reduce 62
	':'  reduce 62
	'>'  reduce 62
	'<'  reduce 62
	')'  reduce 62
	';'  reduce 62


state 86
	exp : exp . '+' exp  (54)
	exp : exp . '-' exp  (55)
	exp : exp . '*' exp  (56)
	exp : exp . '/' exp  (57)
	exp : exp . '%' exp  (58)
	exp : exp . '>' exp  (59)
	exp : exp . '<' exp  (60)
	exp : exp . EQ exp  (61)
	exp : exp . LEQ exp  (62)
	exp : exp . GEQ exp  (63)
	exp : exp GEQ exp .  (63)
	exp : exp . NEQ exp  (64)
	exp : exp . OR exp  (65)
	exp : exp . AND exp  (66)
	exp : exp . '?' exp ':' exp  (67)

	'+'  shift 67
	'-'  shift 68
	'*'  shift 69
	'/'  shift 70
	'%'  shift 71
	EQ  reduce 63
	LEQ  reduce 63
	GEQ  reduce 63
	NEQ  reduce 63
	AND  reduce 63
	OR  reduce 63
	'?'  reduce 63
	':'  reduce 63
	'>'  reduce 63
	'<'  reduce 63
	')'  reduce 63
	';'  reduce 63


state 87
	exp : exp . '+' exp  (54)
	exp : exp . '-' exp  (55)
	exp : exp . '*' exp  (56)
	exp : exp . '/' exp  (57)
	exp : exp . '%' exp  (58)
	exp : exp . '>' exp  (59)
	exp : exp . '<' exp  (60)
	exp : exp . EQ exp  (61)
	exp : exp . LEQ exp  (62)
	exp : exp . GEQ exp  (63)
	exp : exp . NEQ exp  (64)
	exp : exp NEQ exp .  (64)
	exp : exp . OR exp  (65)
	exp : exp . AND exp  (66)
	exp : exp . '?' exp ':' exp  (67)

	'+'  shift 67
	'-'  shift 68
	'*'  shift 69
	'/'  shift 70
	'%'  shift 71
	EQ  reduce 64
	LEQ  reduce 64
	GEQ  reduce 64
	NEQ  reduce 64
	AND  reduce 64
	OR  reduce 64
	'?'  reduce 64
	':'  reduce 64
	'>'  reduce 64
	'<'  reduce 64
	')'  reduce 64
	';'  reduce 64


state 88
	exp : exp . '+' exp  (54)
	exp : exp . '-' exp  (55)
	exp : exp . '*' exp  (56)
	exp : exp . '/' exp  (57)
	exp : exp . '%' exp  (58)
	exp : exp . '>' exp  (59)
	exp : exp . '<' exp  (60)
	exp : exp . EQ exp  (61)
	exp : exp . LEQ exp  (62)
	exp : exp . GEQ exp  (63)
	exp : exp . NEQ exp  (64)
	exp : exp . OR exp  (65)
	exp : exp . AND exp  (66)
	exp : exp AND exp .  (66)
	exp : exp . '?' exp ':' exp  (67)

	EQ  shift 58
	LEQ  shift 59
	GEQ  shift 60
	NEQ  shift 61
	'>'  shift 65
	'<'  shift 66
	'+'  shift 67
	'-'  shift 68
	'*'  shift 69
	'/'  shift 70
	'%'  shift 71
	AND  reduce 66
	OR  reduce 66
	'?'  reduce 66
	':'  reduce 66
	')'  reduce 66
	';'  reduce 66


state 89
	exp : exp . '+' exp  (54)
	exp : exp . '-' exp  (55)
	exp : exp . '*' exp  (56)
	exp : exp . '/' exp  (57)
	exp : exp . '%' exp  (58)
	exp : exp . '>' exp  (59)
	exp : exp . '<' exp  (60)
	exp : exp . EQ exp  (61)
	exp : exp . LEQ exp  (62)
	exp : exp . GEQ exp  (63)
	exp : exp . NEQ exp  (64)
	exp : exp . OR exp  (65)
	exp : exp OR exp .  (65)
	exp : exp . AND exp  (66)
	exp : exp . '?' exp ':' exp  (67)

	EQ  shift 58
	LEQ  shift 59
	GEQ  shift 60
	NEQ  shift 61
	AND  shift 62
	'>'  shift 65
	'<'  shift 66
	'+'  shift 67
	'-'  shift 68
	'*'  shift 69
	'/'  shift 70
	'%'  shift 71
	OR  reduce 65
	'?'  reduce 65
	':'  reduce 65
	')'  reduce 65
	';'  reduce 65


state 90
	exp : exp . '+' exp  (54)
	exp : exp . '-' exp  (55)
	exp : exp . '*' exp  (56)
	exp : exp . '/' exp  (57)
	exp : exp . '%' exp  (58)
	exp : exp . '>' exp  (59)
	exp : exp . '<' exp  (60)
	exp : exp . EQ exp  (61)
	exp : exp . LEQ exp  (62)
	exp : exp . GEQ exp  (63)
	exp : exp . NEQ exp  (64)
	exp : exp . OR exp  (65)
	exp : exp . AND exp  (66)
	exp : exp . '?' exp ':' exp  (67)
	exp : exp '?' exp . ':' exp  (67)

	EQ  shift 58
	LEQ  shift 59
	GEQ  shift 60
	NEQ  shift 61
	AND  shift 62
	OR  shift 63
	'?'  shift 64
	':'  shift 105
	'>'  shift 65
	'<'  shift 66
	'+'  shift 67
	'-'  shift 68
	'*'  shift 69
	'/'  shift 70
	'%'  shift 71
	.  error


state 91
	exp : exp . '+' exp  (54)
	exp : exp . '-' exp  (55)
	exp : exp . '*' exp  (56)
	exp : exp . '/' exp  (57)
	exp : exp . '%' exp  (58)
	exp : exp . '>' exp  (59)
	exp : exp '>' exp .  (59)
	exp : exp . '<' exp  (60)
	exp : exp . EQ exp  (61)
	exp : exp . LEQ exp  (62)
	exp : exp . GEQ exp  (63)
	exp : exp . NEQ exp  (64)
	exp : exp . OR exp  (65)
	exp : exp . AND exp  (66)
	exp : exp . '?' exp ':' exp  (67)

	'+'  shift 67
	'-'  shift 68
	'*'  shift 69
	'/'  shift 70
	'%'  shift 71
	EQ  reduce 59
	LEQ  reduce 59
	GEQ  reduce 59
	NEQ  reduce 59
	AND  reduce 59
	OR  reduce 59
	'?'  reduce 59
	':'  reduce 59
	'>'  reduce 59
	'<'  reduce 59
	')'  reduce 59
	';'  reduce 59


state 92
	exp : exp . '+' exp  (54)
	exp : exp . '-' exp  (55)
	exp : exp . '*' exp  (56)
	exp : exp . '/' exp  (57)
	exp : exp . '%' exp  (58)
	exp : exp . '>' exp  (59)
	exp : exp . '<' exp  (60)
	exp : exp '<' exp .  (60)
	exp : exp . EQ exp  (61)
	exp : exp . LEQ exp  (62)
	exp : exp . GEQ exp  (63)
	exp : exp . NEQ exp  (64)
	exp : exp . OR exp  (65)
	exp : exp . AND exp  (66)
	exp : exp . '?' exp ':' exp  (67)

	'+'  shift 67
	'-'  shift 68
	'*'  shift 69
	'/'  shift 70
	'%'  shift 71
	EQ  reduce 60
	LEQ  reduce 60
	GEQ  reduce 60
	NEQ  reduce 60
	AND  reduce 60
	OR  reduce 60
	'?'  reduce 60
	':'  reduce 60
	'>'  reduce 60
	'<'  reduce 60
	')'  reduce 60
	';'  reduce 60


state 93
	exp : exp . '+' exp  (54)
	exp : exp '+' exp .  (54)
	exp : exp . '-' exp  (55)
	exp : exp . '*' exp  (56)
	exp : exp . '/' exp  (57)
	exp : exp . '%' exp  (58)
	exp : exp . '>' exp  (59)
	exp : exp . '<' exp  (60)
	exp : exp . EQ exp  (61)
	exp : exp . LEQ exp  (62)
	exp : exp . GEQ exp  (63)
	exp : exp . NEQ exp  (64)
	exp : exp . OR exp  (65)
	exp : exp . AND exp  (66)
	exp : exp . '?' exp ':' exp  (67)

	'*'  shift 69
	'/'  shift 70
	'%'  shift 71
	EQ  reduce 54
	LEQ  reduce 54
	GEQ  reduce 54
	NEQ  reduce 54
	AND  reduce 54
	OR  reduce 54
	'?'  reduce 54
	':'  reduce 54
	'>'  reduce 54
	'<'  reduce 54
	'+'  reduce 54
	'-'  reduce 54
	')'  reduce 54
	';'  reduce 54

